deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-table-extractor
  labels:
    app: pdf-table-extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-table-extractor
  template:
    metadata:
      labels:
        app: pdf-table-extractor
    spec:
      containers:
        - name: web
          image: localhost:32000/pdf-table-extractor:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-table-extractor
spec:
  selector:
    app: pdf-table-extractor
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-table-extractor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: pdf-parser.yosephbernandus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdf-table-extractor
                port:
                  number: 80
